# baza_new

./: CMakeLists.txt  README.md  baza.h  baza_new.cpp  baza_new.h  data.hpp  konsola.hpp  pojazdy.hpp  randomgen.h
